fix sizing issue on Carousel images on mobile

--- a/src/components/ImageCarousel/ImageCarousel.css
+++ b/src/components/ImageCarousel/ImageCarousel.css
@@ -6,7 +6,12 @@
     background: linear-gradient(270deg, rgba(0,0,0,0.5) 0%, rgba(255,255,255,0) 90%) !important;
 }
 
-.ImageCarousel-caption p {
+.CarouselCaption p {
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 0.3rem;
 }
+
+.CarouselItem img {
+    max-width: 100%;
+}
+
